--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -391,7 +391,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/LexiPotSmall_25c065c4-8d9b-4760-8570-7c1bfd73b597_2048x-removebg-preview.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> chandelier </div>
                         </div>
@@ -399,7 +399,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WAll ART </div>
                         </div>
