--- a/Raul_Inc/static/Raul_Inc/CSS/main.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/main.css
@@ -4,7 +4,7 @@
     font-size: 14px;
 }
 body {
-    background: #000;
+    background: #6d6d6d;
     font-size: 7.5pt;
     font-family: Arial, sans-serif;
     /*margin: 5px 0 x`60px 0;*/
@@ -12,10 +12,11 @@ body {
     text-align: center;
     color: #FFF;
 }
+
 html {overflow-x:hidden;}
 body {margin:0;padding:0;}
-#pageContent {
-}
+
+
 #wrapper {
     border: 1px solid black;
     width: 100%;
@@ -23,11 +24,13 @@ body {margin:0;padding:0;}
     margin: 0 auto;
     text-align: center;/*	background-color: #CC6;*/
 }
+
 #navcontainer {
     width: 220px;
     height: 100%;
     display: block;
 }
+
 #navcontainer.fixed {
     position: fixed;
     top: 0;
@@ -36,33 +39,43 @@ body {margin:0;padding:0;}
     width: 100%;
     height: 80px;
     font-size: 12px;
-    background-color: #000;
+    background-color: #6d6d6d;
 }
+
 #navlist {
-    background-color: #000;
+    background-color: #6d6d6d;
     padding-bottom: 15px;
 }
+
 #navlist li {
     /*background: #000;*/
     margin-top: 10px;
     display: inline-block;
     padding: 0 44px 0 44px;
 }
+
 a {
     text-decoration: none;
     position: relative;
+    font-weight:500;
+    font-size:16px;
 }
+
 a:hover {
     color: #FFFFFF !important;
 }
+
 a:link {
-    color: #6b6666;
+    background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        
 }
-a:visited {
-    color: #6b6666;
-}
+
+
 #navlist a:hover:after {
     content: '';
+    background: -webkit-linear-gradient(#f8f18e,#d6a55b);
     width: 100%;
     left: 0px;
     position: absolute;
@@ -190,7 +203,7 @@ a:link {
 
 #bio {
     position: absolute;
-    left: 0%;
+    left: 5%;
     width: 41%;
     margin-top: 11%;
     padding: 25px 20px 25px 20px;
@@ -198,6 +211,7 @@ a:link {
     opacity: 0.7;
     text-align: left;
     font-size: 14px;
+    overflow: hidden;
 }
 
 /*@media only screen and (max-device-width : 1024px) {*/
@@ -278,10 +292,11 @@ a:link {
 
 #bgimg {
     position: absolute;
-    width: 100%;
+    width: 100vw;
     left: 0px;
     top: 0px;
 }
+
 .lightbox_center {
     top: 55% !important;
 }
@@ -299,14 +314,13 @@ a:link {
 .clientlistColumn {
     display: inline-block;
     vertical-align: top;
-    background-color: rgba(0, 0, 0, 0.8);
     width: 150px;
     height: 300px;
     padding: 10px;
     margin: 10px;
 }
 #clientList ul li {
-    font-size: 13px;
+    font-size: 16px;
     line-height: 16pt;
     list-style-type: none;
 }
@@ -328,7 +342,7 @@ a:link {
     margin: 0 auto;
     margin-top: 11%;
     padding: 30px 20px 0px 20px;
-    background-color: #000;
+
     opacity: 0.7;
     color: #fff;
     text-align: center;
