--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -9,20 +9,20 @@
     <style>
         .fullscreen-bg {
             position: fixed;
-            top: 80px;
             right: 0;
             bottom: 0;
             left: 0;
             overflow: hidden;
             z-index: -100;
+            height: 100%;
+
         }
 
         .fullscreen-bg__video {
             position: absolute;
-            top: 0;
+            top: -600px;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width:100vw;
         }
         /*
         @media (min-aspect-ratio: 16/9) {
@@ -60,7 +60,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/font-awesome.min.css' %}">
 
 <div id="navcontainer" class="fixed">
-    <div id="logo" class="home-logo"><img src="{%static 'Raul_Inc/Images/RaulAvilaInc.png' %}"/></div>
+    <div id="logo" class="home-logo"><img src="{%static 'Raul_Inc/Images/raulAvilaIncFinal.png' %}"/></div>
     <ul id="navlist">
         <li><a href="{%url 'Raul_Inc_Home' %}">HOME</a></li>
         <li><a href="{%url 'Raul_Inc_Bio' %}">BIO</a></li>
@@ -79,9 +79,8 @@
 </div>
 
 <div class="fullscreen-bg">
-    <video loop muted autoplay poster="{%static 'Raul_Inc/Images/poster.png' %}" class="fullscreen-bg__video">
+    <video loop muted autoplay class="fullscreen-bg__video">
         <source src="{%static 'Raul_Inc/Images/Timelapse_MetGala2019_Square.m4v' %}">
-
     </video>
 </div>
 
