--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -343,9 +343,9 @@
             <ul class="marqueeContent">
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/small.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <a  href="{% url 'login' %}"><img src="{%static 'Raul/Images/small.jpg'%}"  href="{%url 'login' %}" draggable="false" alt="Furniture Photo" class="imageAvatar"></a>
                         <div class = "text">
-                            <div class = "textInfo"> Art </div>
+                            <a href="{% url 'login' %}"> <div class = "textInfo"> Art </div></a>
                         </div>
                     </div>
                 </li>
@@ -359,7 +359,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test2.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -367,7 +367,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{%static 'Raul/Images/Test3.png'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{%static 'Raul/Images/small2.jpg'%}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> FLORAL ARRANGEMENTS </div>
                         </div>
@@ -375,7 +375,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/test_pic.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small.jpg' %}"  draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> DINNERWARE </div>
                         </div>
@@ -383,7 +383,7 @@
                 </li>
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> WALL ART </div>
                         </div>
@@ -408,7 +408,7 @@
 
                 <li>
                     <div class = "container" data-aos="fade-in">
-                        <img src="{% static 'Raul/Images/Test2.png' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
+                        <img src="{% static 'Raul/Images/small2.jpg' %}" draggable="false" alt="Furniture Photo" class="imageAvatar">
                         <div class = "text">
                             <div class = "textInfo"> dinnerware </div>
                         </div>
@@ -441,7 +441,7 @@
                 <div class="headingTab">
                     furniture
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'Furniture' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
@@ -462,7 +462,7 @@
                 <div class="headingTab">
                     floral
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'Furniture' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
@@ -483,7 +483,7 @@
                 <div class="headingTab">
                     lighting
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'lighting' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
@@ -505,7 +505,7 @@
                 <div class="headingTab">
                     wall art
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'Wall Art' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
@@ -527,7 +527,7 @@
                 <div class="headingTab">
                     tabletop
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'tabletop' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
@@ -548,7 +548,7 @@
                 <div class="headingTab" id ="decorativeHeading">
                     decorative 
                 </div>
-                <button>shop now</button>
+                <a  href="{% url 'sec-view' 'Decorative Accessories' %}"><button>shop now</button></a>
             </div>
             <div class="tabImagesRow">
                 <!-- <div class="tabImagesColumn">
