--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -18,7 +18,7 @@
 
     <div class="placeContainers">
         <div class="bigContainer">
-            <a href="#">
+            <a href="{% url 'Raul_Inc_Home' %}">
                 <div class="container" id="cafeBanners">
                     <p id ="raulAvila"><img src="{% static 'Raul/Images/raulAvilaIncFinal.png' %}" alt="logo" width="100%"></p>
                     <!-- <img src="{% static 'Raul/Images/3.jpg' %}" id="bgPic"> -->
