--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: myFirstFont;
+	src: url(avenir-lt-std-35-light.otf);
+}
+
 body{
 	background-color: #6d6d6d;
 	font-family: 'Roboto', sans-serif;
