--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -246,7 +246,7 @@ nav ul li a:hover{
         height:auto;
         text-align: center;
         margin: 0 auto;
-        font-family: 'Roboto', sans-serif;
+        font-family: myFirstFont;
         font-weight:700;
     }
 
@@ -255,7 +255,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:20px;
         outline: none;
         padding:20px;
@@ -320,7 +320,7 @@ nav ul li a:hover{
         text-align: center;
         padding:10px 0px 30px 0px;
         font-size:10px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
     }
 
     .shopBanner figcaption{
@@ -355,7 +355,7 @@ nav ul li a:hover{
 
     .furnitureHeading{
         font-size:30px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -393,7 +393,7 @@ nav ul li a:hover{
         height:250px;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -601,7 +601,7 @@ nav ul li a:hover{
         height:auto;
         text-align: center;
         margin: 0 auto;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight:700;
     }
 
@@ -610,7 +610,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:20px;
         outline: none;
         padding:20px;
@@ -675,7 +675,7 @@ nav ul li a:hover{
         text-align: center;
         padding:10px 0px 30px 0px;
         font-size:10px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
     }
 
     .shopBanner figcaption{
@@ -710,7 +710,7 @@ nav ul li a:hover{
 
     .furnitureHeading{
         font-size:30px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -748,7 +748,7 @@ nav ul li a:hover{
         height:250px;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -955,7 +955,7 @@ nav ul li a:hover{
         height:auto;
         text-align: center;
         margin: 0 auto;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight:700;
     }
 
@@ -964,7 +964,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:20px;
         outline: none;
         padding:20px;
@@ -1029,7 +1029,7 @@ nav ul li a:hover{
         text-align: center;
         padding:10px 0px 30px 0px;
         font-size:10px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
     }
 
     .shopBanner figcaption{
@@ -1064,7 +1064,7 @@ nav ul li a:hover{
 
     .furnitureHeading{
         font-size:30px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -1102,7 +1102,7 @@ nav ul li a:hover{
         height:250px;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -1312,7 +1312,7 @@ nav ul li a:hover{
         height:auto;
         text-align: center;
         margin: 0 auto;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight:700;
     }
 
@@ -1321,7 +1321,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:20px;
         outline: none;
         padding:20px;
@@ -1386,7 +1386,7 @@ nav ul li a:hover{
         text-align: center;
         padding:10px 0px 30px 0px;
         font-size:10px;
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
     }
 
     .shopBanner figcaption{
@@ -1421,7 +1421,7 @@ nav ul li a:hover{
 
     .furnitureHeading{
         font-size:30px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -1459,7 +1459,7 @@ nav ul li a:hover{
         height:250px;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -1594,7 +1594,7 @@ nav ul li a:hover{
 
     body{
         text-transform: lowercase;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background-color: #6d6d6d;
 
     }
@@ -1654,7 +1654,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv span a{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -1694,7 +1694,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv2 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -1742,7 +1742,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv3 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -1757,7 +1757,7 @@ nav ul li a:hover{
     .category{
         overflow: hidden;
         color:transparent;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -1846,7 +1846,7 @@ nav ul li a:hover{
         outline:none;
         color:white;
         font-size: 16px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         background-color:transparent;
         margin-top:60px;
         transition: 0.4s ease-in-out;
@@ -1874,12 +1874,12 @@ nav ul li a:hover{
         text-align: center;
     }
     .dropDownContent a:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
     .dropDownButton:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
@@ -1908,7 +1908,7 @@ nav ul li a:hover{
     }
 
     .bannerHeading figcaption a button{
-        background:rgba(0,0,0,0.8);
+        background:#676767;
         margin:20px;
         font-family: myFirstFont;
         font-size:0.4em;
@@ -2717,7 +2717,7 @@ nav ul li a:hover{
         border: 1px solid rgba(0,0,0,0.5);
         width: 500px; 
         height:520px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
     
       }
 
@@ -2786,7 +2786,7 @@ nav ul li a:hover{
         text-align: center;
         font-weight: bold;
         transition: 0.4s ease-in-out;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
       
       .modal2 button:hover {
@@ -2879,7 +2879,7 @@ nav ul li a:hover{
         color:#cfbb63;
         width: 550px;
         height: auto;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
 
       .modal2 .modal-content .centerIt label{
@@ -2937,7 +2937,7 @@ nav ul li a:hover{
         width: 400px;
         height:200px; 
         max-height:250px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         border-radius: 50px;
         
     }
@@ -3050,7 +3050,7 @@ nav ul li a:hover{
     
     body{
         text-transform: lowercase;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background-color: #6d6d6d;
 
     }
@@ -3109,7 +3109,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv span a{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -3148,7 +3148,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv2 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -3195,7 +3195,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv3 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -3210,7 +3210,7 @@ nav ul li a:hover{
     .category{
         overflow: hidden;
         color:transparent;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -3260,7 +3260,7 @@ nav ul li a:hover{
         left:0;
         top:0;
         color: #cfbb63;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
@@ -3297,7 +3297,7 @@ nav ul li a:hover{
         outline:none;
         color:white;
         font-size: 16px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         background-color:transparent;
         margin-top:60px;
         transition: 0.4s ease-in-out;
@@ -3325,12 +3325,12 @@ nav ul li a:hover{
         text-align: center;
     }
     .dropDownContent a:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
     .dropDownButton:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
@@ -3354,14 +3354,14 @@ nav ul li a:hover{
         position: absolute;
         top:65%;
         left:0px;
-        font-family:'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight:700;
     }
 
     .bannerHeading figcaption a button{
-        background:rgba(0,0,0,0.8);
+        background:#676767;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:0.4em;
         outline: none;
         padding:30px;
@@ -3792,7 +3792,7 @@ nav ul li a:hover{
         outline: none;
         border: none;
         color: #cfbb63;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size: 45px;
         margin:250px 0px 0px 20px;
     }
@@ -3827,7 +3827,7 @@ nav ul li a:hover{
         color: #cfbb63;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -3863,7 +3863,7 @@ nav ul li a:hover{
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         font-weight: bolder;
         letter-spacing: 3px;
         transition: 0.4s ease-in-out;
@@ -3969,7 +3969,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         width:150px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         margin:20px 0px 0px 0px;
         font-weight: bolder;
         transition: 0.4s ease-in-out;
@@ -4085,7 +4085,7 @@ nav ul li a:hover{
         text-align: center;
         font-weight: bold;
         transition: 0.4s ease-in-out;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
       
       .modal button:hover {
@@ -4167,7 +4167,7 @@ nav ul li a:hover{
         border: 1px solid rgba(0,0,0,0.5);
         width: 500px; 
         height:520px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
     
       }
 
@@ -4236,7 +4236,7 @@ nav ul li a:hover{
         text-align: center;
         font-weight: bold;
         transition: 0.4s ease-in-out;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
       
       .modal2 button:hover {
@@ -4328,7 +4328,7 @@ nav ul li a:hover{
         color:#cfbb63;
         width: 550px;
         height: auto;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
 
       .modal2 .modal-content .centerIt label{
@@ -4386,7 +4386,7 @@ nav ul li a:hover{
         width: 400px;
         height:200px; 
         max-height:250px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         border-radius: 50px;
         
     }
@@ -4494,7 +4494,7 @@ nav ul li a:hover{
 
     body{
         text-transform: lowercase;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         background-color: #6d6d6d;
 
     }
@@ -4554,7 +4554,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv span a{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -4594,7 +4594,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv2 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -4642,7 +4642,7 @@ nav ul li a:hover{
     }
 
     .headers figure .navbarIcons .hoverDiv3 span{
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight: bolder;
         font-size:14px;
         color:white;
@@ -4657,7 +4657,7 @@ nav ul li a:hover{
     .category{
         overflow: hidden;
         color:transparent;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: row;
@@ -4713,7 +4713,7 @@ nav ul li a:hover{
         left:0;
         top:0;
         color: #cfbb63;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         display: flex;
         flex-wrap: nowrap;
         flex-direction: column;
@@ -4750,7 +4750,7 @@ nav ul li a:hover{
         outline:none;
         color:white;
         font-size: 16px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         background-color:transparent;
         margin-top:60px;
         transition: 0.4s ease-in-out;
@@ -4778,12 +4778,12 @@ nav ul li a:hover{
         text-align: center;
     }
     .dropDownContent a:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
     .dropDownButton:hover{
-        font-family: 'Roboto Condensed', sans-serif;
+        font-family: myFirstFont;
         letter-spacing: 0.05em;
         cursor: pointer;
     }
@@ -4807,14 +4807,14 @@ nav ul li a:hover{
         position: absolute;
         top:80%;
         left:0px;
-        font-family:'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-weight:700;
     }
 
     .bannerHeading figcaption a button{
-        background:rgba(0,0,0,0.8);
+        background:#676767;
         margin:20px;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size:0.4em;
         outline: none;
         padding:30px;
@@ -5246,7 +5246,7 @@ nav ul li a:hover{
         outline: none;
         border: none;
         color: #cfbb63;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         font-size: 45px;
         margin:250px 0px 0px 20px;
     }
@@ -5281,7 +5281,7 @@ nav ul li a:hover{
         color: #cfbb63;
         text-align: center;
         padding-top:1em;
-        font-family: 'Roboto', sans-serif;
+       font-family: myFirstFont;
         letter-spacing: 5px;
         font-size: 1.5em;
     }
@@ -5317,7 +5317,7 @@ nav ul li a:hover{
         background: -webkit-linear-gradient(#f8f18e,#d6a55b);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         font-weight: bolder;
         letter-spacing: 3px;
         transition: 0.4s ease-in-out;
@@ -5423,7 +5423,7 @@ nav ul li a:hover{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         width:150px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         margin:20px 0px 0px 0px;
         font-weight: bolder;
         transition: 0.4s ease-in-out;
@@ -5539,7 +5539,7 @@ nav ul li a:hover{
         text-align: center;
         font-weight: bold;
         transition: 0.4s ease-in-out;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
       
       .modal button:hover {
@@ -5621,7 +5621,7 @@ nav ul li a:hover{
         border: 1px solid rgba(0,0,0,0.5);
         width: 500px; 
         height:520px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
     
       }
 
@@ -5690,7 +5690,7 @@ nav ul li a:hover{
         text-align: center;
         font-weight: bold;
         transition: 0.4s ease-in-out;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
       
       .modal2 button:hover {
@@ -5782,7 +5782,7 @@ nav ul li a:hover{
         color:#cfbb63;
         width: 550px;
         height:1000px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
       }
 
       .modal2 .modal-content .centerIt label{
@@ -5840,7 +5840,7 @@ nav ul li a:hover{
         width: 400px;
         height:200px; 
         max-height:250px;
-        font-family: 'Roboto',sans-serif;
+        font-family: myFirstFont;
         border-radius: 50px;
         
     }
