--- a/Raul/static/Raul/style.css
+++ b/Raul/static/Raul/style.css
@@ -5,7 +5,7 @@
 
 body{
 	background-color: #6d6d6d;
-	font-family: 'Roboto', sans-serif;
+	font-family: myFirstFont;
 	scroll-behavior: smooth;
 	width:100%;
 	margin:0px;
@@ -68,7 +68,7 @@ body{
 
 .productBanner-heading{
 	font-size:80px;
-	font-family:'Roboto Condensed',sans-sarif;
+	font-family: myFirstFont;
 	text-transform: uppercase;
 	padding:10px 100px 0px 100px;	
 	text-align: center;
