--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -117,7 +117,7 @@
                     <span><a href="{% url 'logout' %}"> <p> Logout </p></a></span>
                 </div>
             </div>
-            <a href="{% url 'cart' %}" title="Shopping Cart"> <p> <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart" > </p></a>
+            <a href="{% url 'cart' %}" title="Shopping Cart"> <p> {{request.session.items_total}}  <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Shopping Cart" > </p></a>
 
             {% else %}
             <a href="{% url 'Raul-SecondHome' %}"><p> <img src="{% static 'Raul/Icons/Icons_Small/home.png' %}" alt="Home"> </p></a>
@@ -128,7 +128,7 @@
                     <span><a href="#" onclick="document.getElementById('id02').style.display='block'">Register</a></span>
                 </div>
             </div>
-            <a href="{% url 'cart' %}" title="Shopping Cart"> <p><img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
+            <a href="{% url 'cart' %}" title="Shopping Cart"> <p>{{request.session.items_total}}    <img src="{% static 'Raul/Icons/Icons_Small/cart.png' %}" alt="Cart"> </p></a>
             {% endif %}
 
         </figure>
@@ -183,7 +183,7 @@
                     <a href="{% url 'register' %}">Login</a>
                 </li>
                 <li>
-                    <a href="{% url 'cart' %}">Cart</a>
+                    <a href="{% url 'cart' %}">Cart {{request.session.items_total}} </a>
                 </li>
 
 
@@ -203,7 +203,7 @@
         <p>
             raul
         </p>
-
+daniel is here
         <p>
             third
         </p>
